--- a/rss.yaml
+++ b/rss.yaml
@@ -17,7 +17,7 @@ Anime:
     regex: .*1080p.*
     path: ./downloads/格莱普尼尔/
   - series: 神盾局特工
-    url: https://rarbg.to/rssdd_magnet.php?categories=41
+    url: https://rarbg.917605.xyz/search/Marvels.Agents.of.S.H.I.E.L.D.S07
     source: Rarbg
     regex: Marvels\.Agents\.of\.S\.H\.I\.E\.L\.D\.S07E[0-9]{2}\.1080p\.WEB\.H264-MEMENTO\[rartv\]
     path: ./downloads/神盾局特工/
