--- a/rss.yaml
+++ b/rss.yaml
@@ -19,5 +19,5 @@ Anime:
   - series: 神盾局特工
     url: https://rarbg.917605.xyz/search/Marvels.Agents.of.S.H.I.E.L.D.S07
     source: Rarbg
-    regex: Marvels\.Agents\.of\.S\.H\.I\.E\.L\.D\.S07E[0-9]{2}\.1080p\.WEB\.H264-MEMENTO\[rartv\]
+    regex: ^(Marvels\.Agents\.of\.S\.H\.I\.E\.L\.D.S07E\d{2}\.1080p\.AMZN\.WEBRip\.DDP5\.1\.x264-T6D\[rartv\]).*
     path: ./downloads/神盾局特工/
