--- a/rss.yaml
+++ b/rss.yaml
@@ -12,11 +12,13 @@ base_url: https://goindexd.917605.xyz/1:/
 
 Anime:
   - series: 格莱普尼尔
+    type: 动漫
     url: https://mikanani.me/RSS/Bangumi?bangumiId=2217&subgroupid=202
     source: Mikan
     regex: .*1080p.*
     path: ./downloads/格莱普尼尔/
   - series: 神盾局特工
+    type: 美剧
     url: https://rarbg.917605.xyz/search/Marvels.Agents.of.S.H.I.E.L.D.S07
     source: Rarbg
     regex: ^(Marvels\.Agents\.of\.S\.H\.I\.E\.L\.D.S07E\d{2}\.1080p\.AMZN\.WEBRip\.DDP5\.1\.x264-T6D\[rartv\]).*
