--- a/rss.yaml
+++ b/rss.yaml
@@ -11,12 +11,18 @@ telegrambot:
 base_url: https://goindexd.917605.xyz/1:/
 
 Anime:
-  - series: 格莱普尼尔
+  - series: 大欺诈师
     type: 动漫
-    url: https://mikanani.me/RSS/Bangumi?bangumiId=2217&subgroupid=202
+    url: https://mikanani.me/RSS/Bangumi?bangumiId=2242&subgroupid=357
+    source: Mikan
+    regex: .*简体内嵌.*
+    path: ./downloads/大欺诈师/
+  - series: 魔物娘的医生
+    type: 动漫
+    url: https://mikanani.me/RSS/Bangumi?bangumiId=2254&subgroupid=202
     source: Mikan
     regex: .*1080p.*
-    path: ./downloads/格莱普尼尔/
+    path: ./downloads/魔物娘的医生/
   - series: 神盾局特工
     type: 美剧
     url: https://rarbg.917605.xyz/search/Marvels.Agents.of.S.H.I.E.L.D.S07
