--- a/rss.yaml
+++ b/rss.yaml
@@ -28,7 +28,7 @@ Anime:
     url: https://mikanani.me/RSS/Bangumi?bangumiId=2257&subgroupid=552
     source: Mikan
     regex: .*1080p.*
-    path: ./downloads/彼得·格里尔的贤者时间
+    path: ./downloads/彼得格里尔的贤者时间
   - series: 神盾局特工
     type: 美剧
     url: https://rarbg.917605.xyz/search/Marvels.Agents.of.S.H.I.E.L.D.S07
