--- a/rss.yaml
+++ b/rss.yaml
@@ -29,6 +29,12 @@ Anime:
     source: Mikan
     regex: .*1080p.*
     path: ./downloads/彼得格里尔的贤者时间
+  - series: 弩级战队HXEROS
+    type: 动漫
+    url: https://mikanani.me/RSS/Bangumi?bangumiId=2255&subgroupid=203
+    source: Mikan
+    regex: .*HEVC.*
+    path: ./downloads/弩级战队HXEROS   
   - series: 神盾局特工
     type: 美剧
     url: https://rarbg.917605.xyz/search/Marvels.Agents.of.S.H.I.E.L.D.S07
