--- a/rss.yaml
+++ b/rss.yaml
@@ -8,6 +8,6 @@ telegrambot:
   token: 834022545:AAH-LPPWlFOCq868ai0S9kH_n2arEoAkqk4
   chat_id: -1001259296192
 
-base_url: https://goindexd.917605.xyz/1:/
+base_url: https://gdindex.apocalypse.workers.dev/
 
 Anime:
