--- a/rss.yaml
+++ b/rss.yaml
@@ -15,5 +15,5 @@ Anime:
     type: 动漫
     url: https://mikanani.me/RSS/Bangumi?bangumiId=2319&subgroupid=376
     source: Mikan
-    regex: "[1080P][简体]"
+    regex: .*\[1080P\]\[简体\].*
     path: ./downloads/魔法科高中的劣等生/
