--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -13,6 +13,8 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
+      with:
+        token: ${{ secrets.REPO_TOKEN }}
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
@@ -29,11 +31,8 @@ jobs:
         ARIA2_SECRET: ${{ secrets.ARIA2_SECRET }}
       run: |
         python ./main.py || echo 'Check your configuration.'
-    - uses: autosuite/autocommit@main
+    - name: Push
+      uses: stefanzweifel/git-auto-commit-action@v4
       with:
-        commit-message: Update
-        add-options: -A
-    - name: Push changes
-      uses: ad-m/github-push-action@master
-      with:
-        github_token: ${{ secrets.REPO_TOKEN }}
+        commit_message: Update Subscription
+        skip_dirty_check: false
