--- a/rss.yaml
+++ b/rss.yaml
@@ -8,7 +8,7 @@ telegrambot:
   token: 834022545:AAH-LPPWlFOCq868ai0S9kH_n2arEoAkqk4
   chat_id: -1001259296192
 
-base_url: https://gdindex.apocalypse.workers.dev/
+base_url: https://gd.akz.me/Upload/
 
 Anime:
   - series: 寒蝉鸣泣之时
